# ESP32S3_Para_Update_Tools

esp32s3/: .clangd  .clangdignore  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
esp32s3/.claude/: settings.json
esp32s3/.codex-workspace-skills/esp32s3/: SKILL.md
esp32s3/.codex-workspace-skills/esp32s3-st7789-lvgl-web/: SKILL.md
esp32s3/components/BSP/: CMakeLists.txt  bsp.c  bsp.h
esp32s3/components/BSP/STORAGE/: storage_flash.c  storage_flash.h
esp32s3/components/app_param_bin/: CMakeLists.txt  app_param_bin.c  app_param_bin.h
esp32s3/components/app_param_board/: CMakeLists.txt  app_param_board.c  app_param_board.h  app_param_board_frame.c  app_param_board_internal.h  app_param_board_ops.c  app_param_board_state.c  app_param_board_store.c
esp32s3/components/app_storage_lock/: CMakeLists.txt  app_storage_lock.c  app_storage_lock.h
esp32s3/components/app_web_file_server/: CMakeLists.txt  admin_about.css  admin_about.js  admin_base.css  admin_bootstrap.js  admin_core.js  admin_dialogs.css  admin_file_page.css  admin_files.js  admin_flash_dump.css  admin_flash_dump.js  admin_navigation.js  admin_param_config.js  admin_shell_theme.css  admin_typography.css  admin_watermark.css  app.html  app_web_assets.c  app_web_assets.h  app_web_auth.c  app_web_auth.h  app_web_common.c  app_web_common.h  app_web_file_delete.c  app_web_file_list.c  app_web_file_meta.c  app_web_file_meta.h  app_web_file_server.c  app_web_file_server.h  app_web_file_transfer.c  app_web_files.c  app_web_files.h  app_web_flash_dump_api.c  app_web_flash_dump_api.h  app_web_pages.c  app_web_pages.h  app_web_param_api.c  app_web_param_api.h  app_web_param_bin_api.c  app_web_param_bin_api.h  (+6 more)
esp32s3/components/app_wifi/: CMakeLists.txt  app_wifi.c  app_wifi.h
esp32s3/main/: CMakeLists.txt  main.c
fpga/: .gitignore
fpga/constraint/: io.adc  io.sdc
fpga/hdl/: top.v
fpga/td/: td.al
tools/: .gitignore  README.md  build_release_exe.bat  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
tools/.codex-workspace-skills/esp32s3-param-bin-tool/: SKILL.md
tools/docs/: bin_protocol.md
tools/release/: README.txt  build_release_exe.bat  finalize_release.ps1
tools/src/: App.tsx
tools/src-tauri/: Cargo.toml  tauri.conf.json
tools/src-tauri/capabilities/: default.json
tools/src-tauri/src/: bin_format.rs  commands.rs  crypto.rs  error.rs  main.rs  model.rs  payload_codec.rs  project_file.rs  tests.rs  validator.rs
tools/src/components/: AboutDialog.tsx  ParamTable.tsx
(+8 files in other folders)
