[package]
name = "param_bin_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
sha2 = "0.10"
zeroize = "1.6"
aes-gcm = "0.10"
byteorder = "1.4"
tauri = { version = "2.5", features = [] }
tauri-plugin-dialog = "2.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }