idf_component_register(
    SRCS "app_web_file_server.c"
         "app_web_assets.c"
         "app_web_auth.c"
         "app_web_common.c"
         "app_web_file_delete.c"
         "app_web_file_list.c"
         "app_web_file_meta.c"
         "app_web_file_transfer.c"
         "app_web_flash_dump_api.c"
         "app_web_pages.c"
         "app_web_param_api.c"
         "app_web_param_bin_api.c"
         "app_web_param_value.c"
    INCLUDE_DIRS "."
    REQUIRES esp_app_format esp_http_server esp_netif app_storage_lock app_param_bin app_param_board
    EMBED_TXTFILES "login.html" "app.html" "user_app.html"
                   "admin_base.css" "admin_file_page.css" "admin_shell_theme.css"
                   "admin_dialogs.css" "admin_flash_dump.css" "admin_about.css"
                   "admin_typography.css" "admin_watermark.css"
                   "admin_core.js" "admin_flash_dump.js" "admin_navigation.js"
                   "admin_files.js" "admin_param_config.js" "admin_about.js"
                   "admin_bootstrap.js"
                   "user_app.css" "user_app.js"
)
